add working js compilation

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
-<h1>HQ</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+
+  <title></title>
+</head>
+<body>
+<h1>Hello word</h1>
+</body>
+<script type="text/javascript" src="/assets/js/index.js">
+
+</script>
+</html>
