add working example with fonts awesome

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title></title>
 </head>
 <body>
-<h1>Hello word</h1>
+<h1>Hello word <i class="fa fa-pencil" title="Edit"></i> </h1>
 </body>
 <script type="text/javascript" src="/assets/js/index.js">
 
