first steps in frontend

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title></title>
+  <title>{{$title}}</title>
 </head>
-<body>
-<h1>Hello word <i class="fa fa-pencil" title="Edit"></i> </h1>
-</body>
-<script type="text/javascript" src="/assets/js/index.js">
 
-</script>
+<body>
+  <div class="container-fluid">
+    <div class="content">
+      <header>
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-7 logo ">Katherina Sokhan Photography</div>
+
+          <div class="d-flexjustify-content-end align-items-center">
+            <nav class="float-right">
+              <a class="p-2 text-dark" href="#">Portfolio</a>
+              <a class="p-2 text-dark" href="#">About me</a>
+              <a class="p-2 text-dark" href="#">Contact</a>
+           </nav>
+          </div>
+        </div>
+      </header>
+    </div>
+
+  </div>
+
+
+</body>
+<script type="text/javascript" src="/assets/js/index.js"></script>
+
+<style>
+  .debug {
+    border: 1px solid red;
+  }
+</style>
+
 </html>
